@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed problem with entity rotation in blueprint book import, in some rare cases.
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.0
 Date: 2025-09-02
